# openvino_with_opencv_cpp

./: CMakeLists.txt  README.md  main.cpp  model.cpp
include/: model.h
include/samples/: classification_results.h
